--- a/app/views/static_paes/home.html.erb
+++ b/app/views/static_paes/home.html.erb
@@ -2,7 +2,12 @@
   <div class="row">
     <aside class="span4">
       <section>
+<% #добавление статистики к Home Page %>
+      <section>
         <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/stats' %>
       </section>
       <section>
         <%= render 'shared/micropost_form' %>
